[metadata]
name = dash-enterprise-auth
version = attr: dash_enterprise_auth.version.__version__
author = Antoine Roy-Gobeil
author_email = antoine@plot.ly
description = Authentication integrations for dash apps using dash-deployment-server
long_description = file: README.md
keywords = dash, dash-enterprise, dash-auth, plotly
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages =
    dash_enterprise_auth
setup_requires =
    dash
install_requires =
    dash
    requests[security]
    retrying
